--- a/public/css/app.css
+++ b/public/css/app.css
@@ -27,3 +27,13 @@
     background:white;
 }
 
+.hovered td {
+    background: lightgrey;
+}
+
+tbody tr:hover.selected td,
+tbody tr:hover td {
+  background-color: #FFEFC6;
+  cursor: pointer;
+}
+
