--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18,9 +18,6 @@
 
 }
 
-.test{
-	color: red;
-}
 
 
 .test2{
@@ -32,15 +29,15 @@
 }
 
 .hovered td {
-	background-color: #00ff00;
-	color: red;
-}
-
-table tbody tr:hover.selected td,
-table tbody tr:hover td{
-	background-color: #FFEFC6;
-	cursor: pointer;
-}
+     background: lightgrey;
+     color: pink;
+ }
+ 
+ tr:hover.selected td,
+ tr:hover td {
+   background-color: pink;
+   cursor: pointer;
+ }
 
 
 
